<resources>
    <string name="app_name">Testing Application</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="btn3">Button 3</string>
    <string name="btn4">Button 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_to_about">Switch to About Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="about_fragment">About Fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="age">Age</string>
    <string name="empty_fragment">Empty Fragment</string>
    <string name="say_hello">Say Hello</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="total_users">Total Users: </string>
    <string name="zero">0</string>
    <string name="cnic">CNIC</string>
    <string name="loading">Loading… Please wait</string>
    <string name="temp">Temp</string>
</resources>