<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".mvvm.view.fragment.HomeFragment">

    <EditText
        android:id="@+id/name_et"
        style="@style/EditText_Normal_Match_Wrap_Style"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/email_et"
        style="@style/EditText_Normal_Match_Wrap_Style"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/age_et"
        style="@style/EditText_Normal_Match_Wrap_Style"
        android:layout_gravity="center"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/toAbout"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_to_about"/>

</LinearLayout>