<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Match_Width_Height"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".mvvm.view.activity.MainActivity">

    <EditText
        android:id="@+id/name_et"
        style="@style/EditText_Normal_Match_Wrap_Style"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/address_et"
        style="@style/EditText_Normal_Match_Wrap_Style"
        android:hint="@string/address"/>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <TextView
        android:id="@+id/total_users_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_users"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:listitem="@layout/item_user"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>