<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="18sp"
        android:gravity="center"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:background="@drawable/circular_bg"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/id_tv"
        app:layout_constraintTop_toTopOf="@id/id_tv"/>

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/name_tv"
        app:layout_constraintTop_toBottomOf="@id/name_tv"/>

    <ImageView
        android:id="@+id/delete_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>